refactor(scenarios): adopt nested scenario schema
